Update iframe positioning to fix bugs with shifting layouts. Wait for the overlay to be dismissed to start youtube videos or overlays.

--- a/src/components/viewerEffects/ViewerYoutubeEffect.css
+++ b/src/components/viewerEffects/ViewerYoutubeEffect.css
@@ -1,6 +1,6 @@
 
 .ytPlayer{
-	position: fixed;
+	position: absolute;
   top: -50vh;
   left: 0;
 	width: 100vw;
